--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 </head>
 
 <body data-gr-c-s-loaded="true">
-
+	<embed src="Relaxing.mp3" loop="true" autostart="true" width="2" height="0">
+		
 
 <!-- desktop header -->
 <header class="desktop-header-3 fixed-top">
@@ -184,7 +185,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<!-- about text -->
-								<p>Hi there , we are the Conscious minds who are thinking about your health. From the PYP Exhibition, our goal is we want each and everyone to be healthy, pyshical but also mentally. With help of you we want accomplish our goal. Our google form and google slides which we have created is for you to share your perspective with us ,which you can get in FaceBook. you must be thinking how can a bunch of 10 and 11 year olds can make a change , well you must have heard the phrase a small change is step to the big change .
+								<p>Hi there , we are the Conscious Minds who are thinking about your health. From the PYP Exhibition, our goal is that we want each and everyone to be healthy both physically and mentally. With your help we want to accomplish our goal. The google forms and google slides that we have created is for you to share your perspective with us in the links available below. You must be thinking how can a bunch of 10 and 11 year olds  make a change , well you must have heard of the phrase "A journey of a thousand miles must begin with the first step".
 									</p>
 
 								
@@ -383,7 +384,10 @@
             		<p style="margin: 5px; color: white; display: inline-block;">Please feel free to contact us on our social media handles</p>
 					<br>
 					<center>
+						
 					<button onclick="BMI()" class="btn btn-success">BMI Calculator</button>
+					<script>
+					function BMI(){location.replace("https://1ow5amduaq6udunzs7n1hq-on.drv.tw/BMI/BMI.html");}</scripT>
 					</center>
 				</div>
 
