--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@
         <div class="col-md-4">
           <div class="blog-item rounded bg-white shadow-dark wow fadeIn" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeIn;">
             <div class="thumb">
-              <a href="healthy_kids_school_cookbook-USDA_FKB.pdf">
+              <a href="CookWise.pdf">
                 <img src="CookBook.PNG" alt="blog-title">
               </a>
             </div>
             <div class="details">
               <h4 class="my-0 title">
-              	<a href="healthy_kids_school_cookbook-USDA_FKB.pdf">The CookBook</a>
+              	<a href="CookWise.pdf">The CookBook</a>
               </h4>
               <ul class="list-inline meta mb-0 mt-2">
                 <li class="list-inline-item">Click Me</li>
