--- a/BMI.html
+++ b/BMI.html
@@ -11,10 +11,10 @@
 		<form action="none" method="post" name="bmiform">
 			<fieldset>
 			<legend>Height and Weight</legend>
-				<label for="pounds">Weight (pounds):</label>
+				<label for="pounds">Weight (KG):</label>
 				<input type="text" name="pounds" id="pounds">
 				<br>
-				<label for="inches">Height (inches):</label>
+				<label for="inches">Height (CM):</label>
 				<input type="text" name="inches" id="inches">
 				<br>
 				<button type="button" name="calculate" value="Calculate your BMI" onclick="calcBMI()">Calculate your BMI</button>
