--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container">
 	
         <nav class="navbar navbar-expand-lg navbar-dark">
-           
+           <img src="Nes_Logo.jpg" height="80px" width="80px">
             <b class="navbar-brand">The Conscious Minds</b> 
 
             <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
